tests/integration/tests/basic_functionality/check_commands/CHECK-EMPTY/01-error_CHECK_EMPTY_without_previous_CHECK/sample.itest
; RUN: cat %S/filecheck.input | (%FILECHECK_EXEC %S/filecheck.check 2>&1; test $? = 2) | %FILECHECK_TESTER_EXEC %s
; CHECK: {{.*}}FileCheck
; CHECK: {{.*}}filecheck.check:1:3: error: found 'CHECK-EMPTY' without previous 'CHECK: line{{$}}
; CHECK: {{^}}; CHECK-EMPTY:{{$}}
; CHECK: {{^}}  ^
; CHECK-EMPTY:
